--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,15 @@
 {
     "arrowParens": "avoid",
     "tabWidth": 4,
-    "trailingComma": "es5",
+    "overrides": [
+        {
+            "files": ["*.yaml", "*.yml"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ],
     "semi": false,
-    "singleQuote": false
+    "singleQuote": false,
+    "trailingComma": "es5"
 }
