--- a/clyde-server/package.json
+++ b/clyde-server/package.json
@@ -8,11 +8,16 @@
     "bun": ">=1.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "fastify": "^5.6.2",
+    "postgres": "^3.4.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "bun-types": "^1.3.3",
+    "drizzle-kit": "^0.31.7",
     "typescript": "^5.9.3"
   }
 }
