--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,50 @@ jobs:
         with:
           bun-version: 1.3.2
 
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+            clyde-bot/node_modules
+            clyde-dashboard/node_modules
+            clyde-server/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
       - name: Verify bun.lock is up to date
         timeout-minutes: 3
         run: |
           if bun install --frozen-lockfile > /dev/null 2>&1; then
             echo "Lockfile OK ✔"
           else
-            echo "::error::❌ bun.lockb is out of sync with package.json. Please run 'bun install'."
+            echo "::error::❌ bun.lock is out of sync with package.json. Please run 'bun install'."
             exit 1
           fi
 
   prettier:
+    needs: lockfile
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.2
+
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+            clyde-bot/node_modules
+            clyde-dashboard/node_modules
+            clyde-server/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -44,12 +71,26 @@ jobs:
           fi
 
   graphql-schema:
+    needs: lockfile
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.2
+
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+            clyde-bot/node_modules
+            clyde-dashboard/node_modules
+            clyde-server/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
