--- a/clyde-bot/package.json
+++ b/clyde-bot/package.json
@@ -12,6 +12,8 @@
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.4",
     "graphql-tag": "^2.12.6",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "@graphql-codegen/typescript": "^5.0.5",
     "@graphql-codegen/typescript-graphql-request": "^6.3.0",
     "@graphql-codegen/typescript-operations": "^5.0.5",
+    "@types/pino": "^7.0.5",
     "bun-types": "^1.3.3",
     "typescript": "^5.9.3"
   },
