--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,11 +146,45 @@ jobs:
             exit 1
           fi
 
+  dashboard-lint:
+    needs: lockfile
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.2
+
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+            clyde-bot/node_modules
+            clyde-dashboard/node_modules
+            clyde-server/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Run dashboard linter
+        run: |
+          if bun --cwd clyde-dashboard run lint; then
+            echo "Dashboard linting passed ✔"
+          else
+            echo "::error::❌ Dashboard linting failed. Please fix the linting errors."
+            exit 1
+          fi
+
   # ---------- Preflight Barrier ----------
 
   # TODO: add changed workspace detection
   preflight:
-    needs: [lockfile, prettier, graphql-schema, graphql-codegen]
+    needs: [lockfile, prettier, graphql-schema, graphql-codegen, dashboard-lint]
     runs-on: ubuntu-latest
     steps:
       - name: Preflight checks passed
