--- a/clyde-bot/package.json
+++ b/clyde-bot/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@langchain/openai": "^1.2.0",
     "discord.js": "^14.24.2",
     "graphql": "^16.12.0",
     "graphql-request": "^7.4.0",
