--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,6 +180,40 @@ jobs:
             exit 1
           fi
 
+  server-lint:
+    needs: lockfile
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.2
+
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+            clyde-bot/node_modules
+            clyde-dashboard/node_modules
+            clyde-server/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Run server linter
+        run: |
+          if bun run --cwd clyde-server lint; then
+            echo "Server linting passed ✔"
+          else
+            echo "::error::❌ Server linting failed. Please fix the linting errors."
+            exit 1
+          fi
+
   # ---------- Preflight Barrier ----------
 
   # TODO: add changed workspace detection
