--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "format:check": "prettier --check ."
   },
   "workspaces": [
+    "clyde-auth",
     "clyde-bot",
     "clyde-dashboard",
     "clyde-server"
