--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,35 @@ jobs:
             exit 1
           fi
 
+  auth-lint:
+    needs: lockfile
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.2
+
+      - name: Cache bun modules
+        uses: actions/cache@v4
+        with:
+          path: *bun-cache-paths
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Run auth linter
+        run: |
+          if bun run --cwd clyde-auth lint; then
+            echo "Auth linting passed ✔"
+          else
+            echo "::error::❌ Auth linting failed. Please fix the linting errors."
+            exit 1
+          fi
+
   bot-lint:
     needs: lockfile
     runs-on: ubuntu-latest
