--- a/clyde-bot/package.json
+++ b/clyde-bot/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "bun run --watch --no-check src/app.ts",
+    "start": "bun run --no-check src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "sync-commands": "bun run scripts/sync-commands.ts",
