--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clyde",
   "private": true,
   "scripts": {
+    "docker:build:bot": "docker build -f clyde-bot/Dockerfile -t clyde-bot .",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
