--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clyde",
   "private": true,
   "scripts": {
+    "docker:build:auth": "docker build -f clyde-auth/Dockerfile -t clyde-auth .",
     "docker:build:bot": "docker build -f clyde-bot/Dockerfile -t clyde-bot .",
     "docker:build:dashboard": "docker build -f clyde-dashboard/Dockerfile -t clyde-dashboard .",
     "docker:build:server": "docker build -f clyde-server/Dockerfile -t clyde-server .",
