--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
   - package-ecosystem: "docker"
     directories:
       - "/dimp-auth"
-      - "/clyde-bot"
+      - "/dimp-bot"
       - "/clyde-dashboard"
       - "/clyde-server"
     schedule:
