--- a/.github/workflows/build-publish-clyde-bot.yml
+++ b/.github/workflows/build-publish-clyde-bot.yml
@@ -1,4 +1,4 @@
-name: Build & Publish clyde-bot Docker Image
+name: Build & Publish dimp-bot Docker Image
 
 on:
   push:
@@ -10,15 +10,15 @@ permissions:
   packages: write
 
 concurrency:
-  group: clyde-bot-image-${{ github.ref }}
+  group: dimp-bot-image-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  clyde-bot:
+  dimp-bot:
     uses: ./.github/workflows/_build-publish.yml
     with:
-      image: ghcr.io/${{ github.repository_owner }}/clyde-bot
+      image: ghcr.io/${{ github.repository_owner }}/dimp-bot
       context: .
-      dockerfile: clyde-bot/Dockerfile
-      scope: clyde-bot
+      dockerfile: dimp-bot/Dockerfile
+      scope: dimp-bot
       push_latest_on_main: true
