--- a/dimp-auth/Dockerfile
+++ b/dimp-auth/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY package.json bun.lock ./
 COPY dimp-auth/package.json dimp-auth/
-COPY clyde-bot/package.json clyde-bot/
+COPY dimp-bot/package.json dimp-bot/
 COPY clyde-dashboard/package.json clyde-dashboard/
 COPY clyde-server/package.json clyde-server/
 
