--- a/dimp-dashboard/Dockerfile
+++ b/dimp-dashboard/Dockerfile
@@ -6,7 +6,7 @@ COPY package.json bun.lock ./
 COPY dimp-auth/package.json dimp-auth/
 COPY dimp-bot/package.json dimp-bot/
 COPY dimp-dashboard/package.json dimp-dashboard/
-COPY clyde-server/package.json clyde-server/
+COPY dimp-server/package.json dimp-server/
 
 RUN bun install --frozen-lockfile --filter dimp-dashboard
 
