--- a/dimp-auth/package.json
+++ b/dimp-auth/package.json
@@ -6,13 +6,15 @@
     "dev": "bun run --watch --no-check src/app.ts",
     "start": "bun run --no-check src/app.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "jwks:rotate": "bun run scripts/jwks.ts"
   },
   "engines": {
     "bun": ">=1.0.0"
   },
   "dependencies": {
     "fastify": "^5.7.1",
+    "jose": "^6.1.3",
     "pino": "^10.3.0",
     "zod": "^4.3.6"
   },
