--- a/.github/workflows/_build-publish.yml
+++ b/.github/workflows/_build-publish.yml
@@ -32,6 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
 
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
