--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -50,6 +52,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -79,6 +83,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -110,6 +116,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -144,6 +152,8 @@ jobs:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -176,6 +186,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -205,6 +217,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -234,6 +248,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
@@ -263,6 +279,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.6
