Set up empty Drizzle schema and DB connection

--- a/dimp-auth/env.example
+++ b/dimp-auth/env.example
@@ -8,3 +8,8 @@ LOG_LEVEL=
 JWKS_FILE=keys/jwks.json
 JWKS_MAX_ACTIVE=
 JWKS_ALG=
+
+DATABASE_URL=
+DB_MAX_CONNECTIONS=10
+DB_IDLE_TIMEOUT=30
+DB_CONNECT_TIMEOUT=30
