--- a/dimp-auth/package.json
+++ b/dimp-auth/package.json
@@ -7,7 +7,8 @@
     "start": "bun run --no-check src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "jwks:rotate": "bun run scripts/jwks.ts"
+    "jwks:rotate": "bun run scripts/jwks.ts",
+    "db:migrate": "drizzle-kit migrate"
   },
   "engines": {
     "bun": ">=1.0.0"
