--- a/dimp-auth/tsconfig.json
+++ b/dimp-auth/tsconfig.json
@@ -4,7 +4,8 @@
         "module": "esnext",
         "moduleResolution": "bundler",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@schema": ["./src/db/schema/index.ts"]
         },
         "types": ["bun-types"],
 
