--- a/dimp-auth/package.json
+++ b/dimp-auth/package.json
@@ -7,15 +7,18 @@
     "start": "bun run --no-check src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "jwks:rotate": "bun run scripts/jwks.ts"
+    "jwks:rotate": "bun run scripts/jwks.ts",
+    "db:migrate": "drizzle-kit migrate"
   },
   "engines": {
     "bun": ">=1.0.0"
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.1",
     "jose": "^6.1.3",
     "pino": "^10.3.0",
+    "postgres": "^3.4.8",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "@types/node": "^25.0.10",
     "@types/pino": "^7.0.5",
     "bun-types": "^1.3.6",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
