Add Discord OAuth endpoints and logic (#141)

--- a/dimp-auth/env.example
+++ b/dimp-auth/env.example
@@ -9,6 +9,10 @@ JWKS_FILE=keys/jwks.json
 JWKS_MAX_ACTIVE=
 JWKS_ALG=
 
+DISCORD_CLIENT_ID=
+DISCORD_OAUTH_TOKEN=
+DISCORD_OAUTH_REDIRECT_URI=
+
 DATABASE_URL=
 DB_MAX_CONNECTIONS=10
 DB_IDLE_TIMEOUT=30
