--- a/dimp-auth/package.json
+++ b/dimp-auth/package.json
@@ -14,6 +14,7 @@
     "bun": ">=1.0.0"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.2",
     "jose": "^6.1.3",
